Working, currently hard-coded to send only 2 lines to my cip,